--- a/index.html
+++ b/index.html
@@ -3,170 +3,170 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Converto</title>
+    <title>Converto.id</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="logo-small.png">
     <script src="script.js" defer></script>
 </head>
 <body>
-<header>
-    <img src="logo.png" alt="Nama Web">
-    <span>Unit Converter Manager</span>
-</header>
+    <header>
+        <img src="logo.png" alt="Nama Web">
+        <span>Unit Converter Manager</span>
+    </header>
 
-<div class="tabs">
-    <!-- Sidebar -->
-    <div class="tabs_sidebar">
-        <button class="tab_button tab_button--active" data-for-tab="1">Ukuran</button>
-        <button class="tab_button" data-for-tab="2">Temperatur</button>
-        <button class="tab_button" data-for-tab="3">Waktu</button>
-        <button class="tab_button" data-for-tab="4">Volume</button>
-        <button class="tab_button" data-for-tab="5">Luas</button>
-    </div>
+    <div class="tabs">
+        <!-- Sidebar -->
+        <div class="tabs_sidebar">
+            <button class="tab_button tab_button--active" data-for-tab="1">Ukuran</button>
+            <button class="tab_button" data-for-tab="2">Temperatur</button>
+            <button class="tab_button" data-for-tab="3">Waktu</button>
+            <button class="tab_button" data-for-tab="4">Volume</button>
+            <button class="tab_button" data-for-tab="5">Luas</button>
+        </div>
 
-    <!--Panjang -->
-    <div class="tab_content tab_content--active" data-tab="1">
-        <h1>Panjang</h1>
-        <div class="isi">
-            <span>Input</span><br>
-            <input type="number" class="length_input">
-            <select class="length_input_unit">
-                <option value="mm">Mm</option>
-                <option value="cm">Cm</option>
-                <option value="dm">Dm</option>
-                <option value="m" selected>M</option>
-                <option value="dam">Dam</option>
-                <option value="hm">Hm</option>
-                <option value="km">Km</option>
-                <option value="ft">Ft</option>
-            </select><br><br>
-            <span>Output</span><br>
-            <span class="length_output">-</span>
-            <select class="length_output_unit">
-                <option value="mm">Mm</option>
-                <option value="cm">Cm</option>
-                <option value="dm">Dm</option>
-                <option value="m" selected>M</option>
-                <option value="dam">Dam</option>
-                <option value="hm">Hm</option>
-                <option value="km">Km</option>
-                <option value="ft">Ft</option>
-            </select><br><br>
-            <button class="length_convert_btn">Convert</button>
+        <!--Panjang -->
+        <div class="tab_content tab_content--active" data-tab="1">
+            <h1>Panjang</h1>
+            <div class="isi">
+                <span>Input</span><br>
+                <input type="number" class="length_input">
+                <select class="length_input_unit">
+                    <option value="mm">Mm</option>
+                    <option value="cm">Cm</option>
+                    <option value="dm">Dm</option>
+                    <option value="m" selected>M</option>
+                    <option value="dam">Dam</option>
+                    <option value="hm">Hm</option>
+                    <option value="km">Km</option>
+                    <option value="ft">Ft</option>
+                </select><br><br>
+                <span>Output</span><br>
+                <span class="length_output">-</span>
+                <select class="length_output_unit">
+                    <option value="mm">Mm</option>
+                    <option value="cm">Cm</option>
+                    <option value="dm">Dm</option>
+                    <option value="m" selected>M</option>
+                    <option value="dam">Dam</option>
+                    <option value="hm">Hm</option>
+                    <option value="km">Km</option>
+                    <option value="ft">Ft</option>
+                </select><br><br>
+                <button class="length_convert_btn">Convert</button>
+            </div>
+        </div>
+
+        <!-- Temperatur -->
+        <div class="tab_content" data-tab="2">
+            <h1>Temperatur</h1>
+            <div class="isi">
+                <span>Input</span><br>
+                <input type="number" class="temp_input">
+                <select class="temp_input_unit">
+                    <option value="C" selected>Celcius</option>
+                    <option value="K">Kelvin</option>
+                    <option value="F">Fahrenheit</option>
+                    <option value="R">Reamur</option>
+                </select><br><br>
+                <span>Output</span><br>
+                <span class="temp_output">-</span>
+                <select class="temp_output_unit">
+                    <option value="C" selected>Celcius</option>
+                    <option value="K">Kelvin</option>
+                    <option value="F">Fahrenheit</option>
+                    <option value="R">Reamur</option>
+                </select><br><br>
+                <button class="temp_convert_btn">Convert</button>
+            </div>
+        </div>
+
+        <!-- Waktu -->
+        <div class="tab_content" data-tab="3">
+            <h1>Waktu</h1>
+            <div class="isi">
+                <span>Input</span><br>
+                <input type="number" class="time_input">
+                <select class="time_input_unit">
+                    <option value="s" selected>Detik</option>
+                    <option value="min">Menit</option>
+                    <option value="h">Jam</option>
+                    <option value="d">Hari</option>
+                    <option value="week">Minggu</option>
+                    <option value="month">Bulan</option>
+                    <option value="year">Tahun</option>
+                </select><br><br>
+                <span>Output</span><br>
+                <span class="time_output">-</span>
+                <select class="time_output_unit">
+                    <option value="s" selected>Detik</option>
+                    <option value="min">Menit</option>
+                    <option value="h">Jam</option>
+                    <option value="d">Hari</option>
+                    <option value="week">Minggu</option>
+                    <option value="month">Bulan</option>
+                    <option value="year">Tahun</option>
+                </select><br><br>
+                <button class="time_convert_btn">Convert</button>
+            </div>
+        </div>
+
+        <!-- Volume -->
+        <div class="tab_content" data-tab="4">
+            <h1>Volume</h1>
+            <div class="isi">
+                <span>Input</span><br>
+                <input type="number" class="volume_input">
+                <select class="volume_input_unit">
+                    <option value="L" selected>Liter</option>
+                    <option value="mL">mL</option>
+                    <option value="cL">cL</option>
+                    <option value="dL">dL</option>
+                    <option value="m3">m³</option>
+                    <option value="cm3">cm³</option>
+                    <option value="mm3">mm³</option>
+                </select><br><br>
+                <span>Output</span><br>
+                <span class="volume_output">-</span>
+                <select class="volume_output_unit">
+                    <option value="L" selected>Liter</option>
+                    <option value="mL">mL</option>
+                    <option value="cL">cL</option>
+                    <option value="dL">dL</option>
+                    <option value="m3">m³</option>
+                    <option value="cm3">cm³</option>
+                    <option value="mm3">mm³</option>
+                </select><br><br>
+                <button class="volume_convert_btn">Convert</button>
+            </div>
+        </div>
+
+        <!-- Tab Content Luas -->
+        <div class="tab_content" data-tab="5">
+            <h1>Luas</h1>
+            <div class="isi">
+                <span>Input</span><br>
+                <input type="number" class="area_input">
+                <select class="area_input_unit">
+                    <option value="mm2">mm²</option>
+                    <option value="cm2">cm²</option>
+                    <option value="dm2">dm²</option>
+                    <option value="m2" selected>m²</option>
+                    <option value="dam2">dam²</option>
+                    <option value="km2">km²</option>
+                </select><br><br>
+                <span>Output</span><br>
+                <span class="area_output">-</span>
+                <select class="area_output_unit">
+                    <option value="mm2">mm²</option>
+                    <option value="cm2">cm²</option>
+                    <option value="dm2">dm²</option>
+                    <option value="m2" selected>m²</option>
+                    <option value="dam2">dam²</option>
+                    <option value="km2">km²</option>
+                </select><br><br>
+                <button class="area_convert_btn">Convert</button>
+            </div>
         </div>
     </div>
-
-    <!-- Temperatur -->
-    <div class="tab_content" data-tab="2">
-        <h1>Temperatur</h1>
-        <div class="isi">
-            <span>Input</span><br>
-            <input type="number" class="temp_input">
-            <select class="temp_input_unit">
-                <option value="C" selected>Celcius</option>
-                <option value="K">Kelvin</option>
-                <option value="F">Fahrenheit</option>
-                <option value="R">Reamur</option>
-            </select><br><br>
-            <span>Output</span><br>
-            <span class="temp_output">-</span>
-            <select class="temp_output_unit">
-                <option value="C" selected>Celcius</option>
-                <option value="K">Kelvin</option>
-                <option value="F">Fahrenheit</option>
-                <option value="R">Reamur</option>
-            </select><br><br>
-            <button class="temp_convert_btn">Convert</button>
-        </div>
-    </div>
-
-    <!-- Waktu -->
-    <div class="tab_content" data-tab="3">
-        <h1>Waktu</h1>
-        <div class="isi">
-            <span>Input</span><br>
-            <input type="number" class="time_input">
-            <select class="time_input_unit">
-                <option value="s" selected>Detik</option>
-                <option value="min">Menit</option>
-                <option value="h">Jam</option>
-                <option value="d">Hari</option>
-                <option value="week">Minggu</option>
-                <option value="month">Bulan</option>
-                <option value="year">Tahun</option>
-            </select><br><br>
-            <span>Output</span><br>
-            <span class="time_output">-</span>
-            <select class="time_output_unit">
-                <option value="s" selected>Detik</option>
-                <option value="min">Menit</option>
-                <option value="h">Jam</option>
-                <option value="d">Hari</option>
-                <option value="week">Minggu</option>
-                <option value="month">Bulan</option>
-                <option value="year">Tahun</option>
-            </select><br><br>
-            <button class="time_convert_btn">Convert</button>
-        </div>
-    </div>
-
-    <!-- Volume -->
-    <div class="tab_content" data-tab="4">
-        <h1>Volume</h1>
-        <div class="isi">
-            <span>Input</span><br>
-            <input type="number" class="volume_input">
-            <select class="volume_input_unit">
-                <option value="L" selected>Liter</option>
-                <option value="mL">mL</option>
-                <option value="cL">cL</option>
-                <option value="dL">dL</option>
-                <option value="m3">m³</option>
-                <option value="cm3">cm³</option>
-                <option value="mm3">mm³</option>
-            </select><br><br>
-            <span>Output</span><br>
-            <span class="volume_output">-</span>
-            <select class="volume_output_unit">
-                <option value="L" selected>Liter</option>
-                <option value="mL">mL</option>
-                <option value="cL">cL</option>
-                <option value="dL">dL</option>
-                <option value="m3">m³</option>
-                <option value="cm3">cm³</option>
-                <option value="mm3">mm³</option>
-            </select><br><br>
-            <button class="volume_convert_btn">Convert</button>
-        </div>
-    </div>
-
-    <!-- Tab Content Luas -->
-    <div class="tab_content" data-tab="5">
-        <h1>Luas</h1>
-        <div class="isi">
-            <span>Input</span><br>
-            <input type="number" class="area_input">
-            <select class="area_input_unit">
-                <option value="mm2">mm²</option>
-                <option value="cm2">cm²</option>
-                <option value="dm2">dm²</option>
-                <option value="m2" selected>m²</option>
-                <option value="dam2">dam²</option>
-                <option value="km2">km²</option>
-            </select><br><br>
-            <span>Output</span><br>
-            <span class="area_output">-</span>
-            <select class="area_output_unit">
-                <option value="mm2">mm²</option>
-                <option value="cm2">cm²</option>
-                <option value="dm2">dm²</option>
-                <option value="m2" selected>m²</option>
-                <option value="dam2">dam²</option>
-                <option value="km2">km²</option>
-            </select><br><br>
-            <button class="area_convert_btn">Convert</button>
-        </div>
-    </div>
-</div>
 </body>
 </html>
