--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
                 <span>Input</span><br>
                 <input type="number" class="temp_input">
                 <select class="temp_input_unit">
-                    <option value="C" selected>Celcius</option>
-                    <option value="K">Kelvin</option>
+                    <option value="C">Celcius</option>
+                    <option value="K" selected>Kelvin</option>
                     <option value="F">Fahrenheit</option>
                     <option value="R">Reamur</option>
                 </select><br><br>
                 <span>Output</span><br>
                 <span class="temp_output">-</span>
                 <select class="temp_output_unit">
-                    <option value="C" selected>Celcius</option>
-                    <option value="K">Kelvin</option>
+                    <option value="C">Celcius</option>
+                    <option value="K" selected>Kelvin</option>
                     <option value="F">Fahrenheit</option>
                     <option value="R">Reamur</option>
                 </select><br><br>
@@ -182,7 +182,7 @@
                     <option value="dag">dag</option>
                     <option value="hg">hg</option>
                     <option value="hg">hg</option>
-                    <option value="kg">kg</option>
+                    <option value="kg" selected>kg</option>
                     <option value="ton">ton</option>
                 </select><br><br>
                 <span>Output</span><br>
@@ -194,7 +194,7 @@
                     <option value="g">g</option>
                     <option value="dag">dag</option>
                     <option value="hg">hg</option>
-                    <option value="kg">kg</option>
+                    <option value="kg" selected>kg</option>
                     <option value="ton">ton</option>
                 </select><br><br>
                 <button class="massa_convert_btn">Convert</button></div>
